cmake_minimum_required(VERSION 3.28)
project(Practice_23_4)

set(CMAKE_CXX_STANDARD 20)

# Создание первого исполняемого файла
add_executable(Practice-23.4.1 Practice-23.4.1_Input_and_output.cpp)

# Создание второго исполняемого файла
add_executable(Practice-23.4.2 Practice-23.4.2_Time_of_year_inference.cpp)

# Создание третьего исполняемого файла
add_executable(Practice-23.4.3 Practice-23.4.3.cpp)
